# p4-belle

./: .gitignore  README.md  install.sh  pyproject.toml  spec.md
.github/workflows/: tests.yml
src/p5/: __main__.py  cli.py  completion.py  dummy_data.py  p4.py  theme.py  workspace.py
src/p5.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/p5/commands/: add.py  change.py  changes.py  delete.py  diff.py  edit.py  filelog.py  status.py  submit.py  sync.py  ws.py
src/p5/tui/: change_app.py  changes_app.py  submit_app.py  widgets.py  ws_app.py
tests/: conftest.py  test_commands.py  test_cwd_outside_workspace.py  test_dummy_data.py  test_p4.py  test_tui_bugs.py  test_tui_change.py  test_tui_submit.py  test_tui_widgets.py  test_workspace.py
