[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "p5"
version = "0.1.0"
description = "Perforce CLI with git-like UX"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "textual>=0.47",
]

[project.scripts]
p5 = "p5.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
